hphp/hack/test/requireclass/typing/const_01.bad.php.exp
File "const_01.bad.php", line 9, characters 42-42:
No class constant `X` in `C` (Typing[4090])
  File "const_01.bad.php", line 12, characters 13-13:
  Declaration of `C` is here
